# DCNmodel

./: .gitignore  DCNmodel.py  LICENSE  README.md  create_tf_datasets.py  getting_started.sh  main.py  preprocessing.py  pyproject.toml
docs/: wiki.md
model/DCN_vocab00/: history.csv
model/MLP_vocab00/: history.csv
